improved the font and playing sound when pushing a button

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 
 @font-face {
   font-family:CustomFont;
-  src: url('./OctoberCrow.ttf');
+  src: url('./font.ttf');
   font-weight: 400;
   font-weight: normal;
 }
